--- a/flut_librosearch/pubspec.yaml
+++ b/flut_librosearch/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.2.0
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
